Fixed bug preventing the form from being submitted

--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
               <i class="bi bi-exclamation-circle"></i>
               <small>Error message</small>
             </div>
-            <button type="submit">Submit</button>
+            <button type="submit" id="submit">Submit</button>
           </div>
         </div>
       </form>
