Added formsubmit functionality

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 
     <section class="form_container">
       <form
-        action="https://formsubmit.co/espensnert@hotmail.com"
+        action="https://formsubmit.co/8f92aac3bfe8d099d8916fdc29d4cb55"
         method="POST"
         id="form"
         class="form"
